experience area style

--- a/style.css
+++ b/style.css
@@ -57,3 +57,37 @@ h1{
 .dream-banner div{
     width: 40%;
 }
+
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px grey;
+    border-radius: 10px;
+    padding-left: 20px;
+}
+h2{
+    font-size: 40px;
+}
+
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-position: left;
+    background-repeat: no-repeat;
+}
+
+#baby-web-devoloper{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+
+#full-stack-devoloper{
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon,tomato);
+    border-image-slice: 1;
+}
+
+footer p{
+    text-align: center;
+}
